syntax = "proto3";
package service;

option go_package = "./proto";

service AuthService{
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Signup(SignupRequest) returns (SignupResponse);
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}

message LoginRequest{
    string username = 1;
    string password = 2;
}

message LoginResponse{
    bool success = 1;
    string message = 2;
    string token = 3;
}

message SignupRequest{
    string username = 1;
    string password = 2;
}

message SignupResponse{
    bool success = 1;
    string username = 2;
    string message = 3;
}

message AuthenticateRequest{
    string token = 1;
}

message AuthenticateResponse{
    bool success = 1;
    int32 id = 2;
}